Dark mode fixes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -77,12 +77,10 @@ trix-toolbar .trix-button {
     background-image: linear-gradient(135deg, #F56565, #F56565 30%, #ED8936);
 }
 
-.prose strong {
-    @apply dark:text-gray-300;
-}
-
-.prose h1 {
-    @apply dark:text-gray-300;
+.prose {
+    h1, strong, a, blockquote {
+        @apply dark:text-gray-300;
+    }
 }
 
 .prose em {
